* Add Marathi translation
* Restore ``caps`` typogrify filter (wraps strings of capital letters
  with ``<span class="caps">`` (via Issue #3405)
* Improve ``nikola auto`` performance with rate-limiting, support
  ``-n`` argument to pass to ``nikola build`` (Issue #3401)
* Added Marathi translation
* Add support for the `Utterances <https://utteranc.es>`_ comment system.

Bugfixes
--------

* Read files as utf-8-sig to allow BOM in input files
* Don’t break slugs with slashes in ``doc`` directive (Issue #3450)
* Avoid warnings from type annotations in ``auto`` caused by missing
  ``aiohttp`` (Issue #3451)
* Ensure query strings and fragments are kept with ``URL_TYPE =
  "full_path"`` (Issue #3448)
* Don’t run typogrify filters on ``<title>`` tag to avoid adding extra
  tags(Issue #3405)
* Fix handling of duplicate plugins on Windows
* Allow else clause in post-list plugin. (Issue #3436)
* Ensure `type` metadata value from plugins is preserved (Issue 3445)
* Fix path handlers with slashes on Windows

New in v8.1.1
=============

Bugfixes
--------

* Default to no line numbers in code blocks, honor CodeHilite
  requesting no line numbers. Listing pages still use line numbers
  (Issue #3426)
* Remove duplicate MathJax config in bootstrap themes (Issue #3427)
* Fix ``doit`` requirement to ``doit>=0.32.0`` (Issue #3422)

New in v8.1.0
=============

Features
--------

* Support posts without titles (Issue #3408)
* Support WebP image scaling (Issue #3399)
* Use Luxon instead of Moment for fancy dates to make it more
  lightweight, going from 328k to 68k (Issue #3232)
* New ``nikola console -s script.py`` option to run scripts that
  access your site (Issue #3385)
* Allow preview images to be relative to posts for bootblog4 featured
  posts
* Change the listings formatting to support word wrap with line
  numbers and improve appearance
* Put the current language’s feed links first so that feed readers
  prefer it (Issue #3248)