@@ -17,6 +17,7 @@ Features
 Bugfixes
 --------
 
+* Add support for ``nbconvert>=6.0.0`` (Issue #3457)
 * Read files as utf-8-sig to allow BOM in input files
 * Don’t break slugs with slashes in ``doc`` directive (Issue #3450)
 * Avoid warnings from type annotations in ``auto`` caused by missing
